입력된 생년월일제거

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <h1>트리 만세력</h1>
 <form id="saju-form">
   <label>생년월일:</label> 
-  <input type="date" id="birth-date" required value="1969-08-23" />
+  <input type="date" id="birth-date" required />
   <label for="calendar-type"></label>
   <select id="calendar-type" name="calendar-type">
     <option value="solar" selected>양력</option>
