--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   <option value="5">5시</option>
   <option value="6">6시</option>
   <option value="7">7시</option>
-  <option value="8" selected>8시</option>
+  <option value="8">8시</option>
   <option value="9">9시</option>
   <option value="10">10시</option>
   <option value="11">11시</option>
@@ -82,7 +82,7 @@
   <option value="27">27분</option>
   <option value="28">28분</option>
   <option value="29">29분</option>
-  <option value="30" selected>30분</option>
+  <option value="30">30분</option>
   <option value="31">31분</option>
   <option value="32">32분</option>
   <option value="33">33분</option>
