입력된 생년월일제거

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <!-- 시간 -->
  <label>+</label>
 <select id="hour-select">
-  <option value="1"></option>
+  <option value=""></option>
   <option value="1">1시</option>
   <option value="2">2시</option>
   <option value="3">3시</option>
@@ -53,7 +53,7 @@
 
 
 <select id="minute-select">
-  <option value="0"></option>
+  <option value=""></option>
   <option value="0">0분</option>
   <option value="1">1분</option>
   <option value="2">2분</option>
