대운 수 수정

--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,8 @@
 </form>
 <div id="result" class="result-box"></div>
 <div id="sewoon" class="result-box"></div>
+<!-- 기존 출력 아래쪽에 추가 -->
+<div id="today-saju-container" style="margin-top:30px;"></div>
 
 
 
