대운 수 수정

--- a/public/index2.html
+++ b/public/index2.html
@@ -6,7 +6,6 @@
 
 <title>트리 만세력</title>
 <!-- ✅ 모듈로 로딩해야 import 문 사용 가능 -->
-<script type="module" src="utils2.js"></script>
 
 
 <script type="module" src="app.js"></script>
@@ -123,6 +122,8 @@
 </form>
 <div id="result" class="result-box"></div>
 <div id="sewoon" class="result-box"></div>
+<!-- 기존 출력 아래쪽에 추가 -->
+<div id="today-saju-container" style="margin-top:30px;"></div>
 
 
 
