--- a/public/index.html
+++ b/public/index.html
@@ -125,6 +125,16 @@
 <!-- 기존 출력 아래쪽에 추가 -->
 <div id="today-saju-container" style="margin-top:30px;"></div>
 
+<!-- 질문 입력 및 전송 박스 -->
+<div id="question-box" style="margin-top: 40px; padding: 20px; border-top: 1px solid #ccc;">
+  <h3>질문하기</h3>
+  <textarea id="question-input" placeholder="궁금한 점을 입력하세요..." rows="4" style="width: 100%; padding: 10px;"></textarea>
+  <br />
+  <button id="send-email-button" style="margin-top: 10px; padding: 10px 20px;">보내기 (이메일)</button>
+</div>
+
+<!-- EmailJS SDK 추가 -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
 
 </body>
