--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
 
 <title>트리 만세력</title>
 
-<script type="module" src="app.js"></script>
 
 <style>
   body {
@@ -135,6 +134,11 @@
 
 
 </style>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
+<!-- 2. flatpickr JS (★ 먼저 불러와야 함) -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 <body>
 
@@ -149,10 +153,12 @@
 
   <h1>트리 만세력</h1>
 
-  <form id="saju-form">
+    <form id="saju-form">
     <label>생년월일:</label> 
-    <input type="date" id="birth-date" required />
-    <select id="calendar-type" name="calendar-type">
+    <input  type="text" id="birth-date" placeholder="YYYYMMDD" class="birthdate-input" />
+ 
+    
+  <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
       <option value="solar" >양력</option>
       <option value="lunar">음력</option>
@@ -246,6 +252,7 @@
 
 
   </form>
+
 <div class="note-box">
   ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다. 
 </div>
@@ -261,9 +268,19 @@
   </div>
 </div>
 
+
 <!-- EmailJS SDK 추가 -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-
+<script type="module" src="app.js"></script>
+   <script>
+    flatpickr("#birthdate", {
+      dateFormat: "Y-m-d",
+      allowInput: true,
+      //maxDate: "2100-12-31",
+      //minDate: "1900-01-01",
+      defaultDate: "1969-08-23" //초기날짜값
+    });
+  </script>
 </body>
 </html>
 
