--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
-      <option value="solar" selected>양력</option>
+      <option value="solar" >양력</option>
       <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
