--- a/public/index3선택됨.html
+++ b/public/index3선택됨.html
@@ -132,6 +132,10 @@
   box-shadow: 0 0 4px rgba(40,167,69,0.5);
 }
 
+  .green { color: green; font-weight: bold; }
+  .red { color: red; font-weight: bold; }
+
+
 
 </style>
 
@@ -160,7 +164,7 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
-      <option value="solar" selected>양력</option>
+      <option value="solar" selected="" >양력</option>
       <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
