--- a/public/index.html
+++ b/public/index.html
@@ -164,14 +164,14 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
-      <option value="solar" >양력</option>
+      <option value="solar" selected="" >양력</option>
       <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
-    <label><input type="radio" name="gender" value="male" > 남자</label>
+    <label><input type="radio" name="gender" value="male" checked> 남자</label>
     <label><input type="radio" name="gender" value="female"> 여자</label><br />
     <label>출생 시간:</label>
-    <label><input type="radio" name="ampm" value="AM" > 오전</label>
+    <label><input type="radio" name="ampm" value="AM" checked> 오전</label>
     <label><input type="radio" name="ampm" value="PM"> 오후</label>
     <label>+</label>
     <select id="hour-select">
@@ -183,7 +183,7 @@
       <option value="5">5시</option>
       <option value="6">6시</option>
       <option value="7">7시</option>
-      <option value="8" >8시</option>
+      <option value="8" selected>8시</option>
       <option value="9">9시</option>
       <option value="10">10시</option>
       <option value="11">11시</option>
@@ -221,7 +221,7 @@
   <option value="27">27분</option>
   <option value="28">28분</option>
   <option value="29">29분</option>
-  <option value="30">30분</option>
+  <option value="30"selected>30분</option>
   <option value="31">31분</option>
   <option value="32">32분</option>
   <option value="33">33분</option>
@@ -260,9 +260,9 @@
 <div class="note-box">
   ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다. 
 </div>
-  <div id="result"></div>
-  <div id="sewoon"></div>
-  <div id="today-saju-container" style="margin-top:30px;"></div>
+  <div id="result" style="display: none;"></div>
+
+  <div id="today-saju-container" style="margin-top:30px;display: none;"></div>
 
   <div id="question-box" style="margin-top: 40px; padding: 20px; border-top: 1px solid #ccc;">
     <h3>질문하기</h3>
