--- a/public/index.html
+++ b/public/index.html
@@ -164,14 +164,14 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
-      <option value="solar" selected="" >양력</option>
+      <option value="solar" >양력</option>
       <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
-    <label><input type="radio" name="gender" value="male" checked> 남자</label>
+    <label><input type="radio" name="gender" value="male" > 남자</label>
     <label><input type="radio" name="gender" value="female"> 여자</label><br />
     <label>출생 시간:</label>
-    <label><input type="radio" name="ampm" value="AM" checked> 오전</label>
+    <label><input type="radio" name="ampm" value="AM" > 오전</label>
     <label><input type="radio" name="ampm" value="PM"> 오후</label>
     <label>+</label>
     <select id="hour-select">
@@ -183,7 +183,7 @@
       <option value="5">5시</option>
       <option value="6">6시</option>
       <option value="7">7시</option>
-      <option value="8" selected>8시</option>
+      <option value="8" >8시</option>
       <option value="9">9시</option>
       <option value="10">10시</option>
       <option value="11">11시</option>
@@ -221,7 +221,7 @@
   <option value="27">27분</option>
   <option value="28">28분</option>
   <option value="29">29분</option>
-  <option value="30"selected>30분</option>
+  <option value="30">30분</option>
   <option value="31">31분</option>
   <option value="32">32분</option>
   <option value="33">33분</option>
