--- a/public/index3선택됨.html
+++ b/public/index3선택됨.html
@@ -260,9 +260,9 @@
 <div class="note-box">
   ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다. 
 </div>
-  <div id="result"></div>
-  <div id="sewoon"></div>
-  <div id="today-saju-container" style="margin-top:30px;"></div>
+  <div id="result" style="display: none;"></div>
+
+  <div id="today-saju-container" style="margin-top:30px;display: none;"></div>
 
   <div id="question-box" style="margin-top: 40px; padding: 20px; border-top: 1px solid #ccc;">
     <h3>질문하기</h3>
