--- a/public/index3선택됨.html
+++ b/public/index3선택됨.html
@@ -164,15 +164,15 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
-      <option value="solar" selected="" >양력</option>
-      <option value="lunar">음력</option>
+      <option value="solar"  >양력</option>
+      <option value="lunar"selected="">음력</option>
     </select><br />
     <label>성별:</label>
-    <label><input type="radio" name="gender" value="male" checked> 남자</label>
-    <label><input type="radio" name="gender" value="female"> 여자</label><br />
+    <label><input type="radio" name="gender" value="male" > 남자</label>
+    <label><input type="radio" name="gender" value="female"checked> 여자</label><br />
     <label>출생 시간:</label>
-    <label><input type="radio" name="ampm" value="AM" checked> 오전</label>
-    <label><input type="radio" name="ampm" value="PM"> 오후</label>
+    <label><input type="radio" name="ampm" value="AM" > 오전</label>
+    <label><input type="radio" name="ampm" value="PM"checked> 오후</label>
     <label>+</label>
     <select id="hour-select">
       <option value=""></option>
@@ -180,10 +180,10 @@
       <option value="2">2시</option>
       <option value="3">3시</option>
       <option value="4">4시</option>
-      <option value="5">5시</option>
+      <option value="5"selected>5시</option>
       <option value="6">6시</option>
       <option value="7">7시</option>
-      <option value="8" selected>8시</option>
+      <option value="8" >8시</option>
       <option value="9">9시</option>
       <option value="10">10시</option>
       <option value="11">11시</option>
@@ -191,7 +191,7 @@
     </select>
 <select id="minute-select">
   <option value=""></option>
-  <option value="0">0분</option>
+  <option value="0"selected>0분</option>
   <option value="1">1분</option>
   <option value="2">2분</option>
   <option value="3">3분</option>
@@ -221,7 +221,7 @@
   <option value="27">27분</option>
   <option value="28">28분</option>
   <option value="29">29분</option>
-  <option value="30"selected>30분</option>
+  <option value="30">30분</option>
   <option value="31">31분</option>
   <option value="32">32분</option>
   <option value="33">33분</option>
