--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -164,7 +164,7 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
-      <option value="solar" >양력</option>
+      <option value="solar"  >양력</option>
       <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
@@ -175,7 +175,7 @@
     <label><input type="radio" name="ampm" value="PM"> 오후</label>
     <label>+</label>
     <select id="hour-select">
-      <option value=""></option>
+      <option value="선택"></option>
       <option value="1">1시</option>
       <option value="2">2시</option>
       <option value="3">3시</option>
@@ -190,7 +190,7 @@
       <option value="12">12시</option>
     </select>
 <select id="minute-select">
-  <option value=""></option>
+  <option value="선택"></option>
   <option value="0">0분</option>
   <option value="1">1분</option>
   <option value="2">2분</option>
