--- a/public/index.html
+++ b/public/index.html
@@ -165,33 +165,34 @@
     <select id="calendar-type" name="calendar-type">
       <option value="" ></option>
       <option value="solar"  >양력</option>
-      <option value="lunar">음력</option>
+      <option value="lunar"selected="">음력</option>
     </select><br />
     <label>성별:</label>
     <label><input type="radio" name="gender" value="male" > 남자</label>
-    <label><input type="radio" name="gender" value="female"> 여자</label><br />
+    <label><input type="radio" name="gender" value="female"checked> 여자</label><br />
     <label>출생 시간:</label>
     <label><input type="radio" name="ampm" value="AM" > 오전</label>
-    <label><input type="radio" name="ampm" value="PM"> 오후</label>
+    <label><input type="radio" name="ampm" value="PM"checked> 오후</label>
     <label>+</label>
     <select id="hour-select">
-      <option value="선택"></option>
+      <option value=""></option>
+       <option value="0">0시</option>
       <option value="1">1시</option>
       <option value="2">2시</option>
       <option value="3">3시</option>
       <option value="4">4시</option>
-      <option value="5">5시</option>
+      <option value="5"selected>5시</option>
       <option value="6">6시</option>
       <option value="7">7시</option>
       <option value="8" >8시</option>
       <option value="9">9시</option>
       <option value="10">10시</option>
       <option value="11">11시</option>
-      <option value="12">12시</option>
+
     </select>
 <select id="minute-select">
-  <option value="선택"></option>
-  <option value="0">0분</option>
+  <option value=""></option>
+  <option value="0"selected>0분</option>
   <option value="1">1분</option>
   <option value="2">2분</option>
   <option value="3">3분</option>
