신살적용중

--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -163,7 +163,7 @@
  
     
     <select id="calendar-type" name="calendar-type">
-      <option value="" ></option>
+      <option value="선택" ></option>
       <option value="solar"  >양력</option>
       <option value="lunar">음력</option>
     </select><br />
@@ -176,7 +176,6 @@
     <label>+</label>
     <select id="hour-select">
       <option value="선택"></option>
-      <option value=""></option>
        <option value="0">0시</option>
       <option value="1">1시</option>
       <option value="2">2시</option>
