--- a/public/index3선택됨.html
+++ b/public/index3선택됨.html
@@ -163,7 +163,7 @@
  
     
     <select id="calendar-type" name="calendar-type">
-      <option value="" ></option>
+      <option value="선택" ></option>
       <option value="solar"  >양력</option>
       <option value="lunar"selected="">음력</option>
     </select><br />
@@ -175,7 +175,7 @@
     <label><input type="radio" name="ampm" value="PM"checked> 오후</label>
     <label>+</label>
     <select id="hour-select">
-      <option value=""></option>
+      <option value="선택"></option>
        <option value="0">0시</option>
       <option value="1">1시</option>
       <option value="2">2시</option>
@@ -190,7 +190,7 @@
       <option value="11">11시</option>
     </select>
 <select id="minute-select">
-  <option value=""></option>
+  <option value="선택"></option>
   <option value="0"selected>0분</option>
   <option value="1">1분</option>
   <option value="2">2분</option>
