신살적용중

--- a/public/index.html
+++ b/public/index.html
@@ -165,14 +165,14 @@
     <select id="calendar-type" name="calendar-type">
       <option value="선택" ></option>
       <option value="solar"  >양력</option>
-      <option value="lunar"selected="">음력</option>
+      <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
     <label><input type="radio" name="gender" value="male" > 남자</label>
-    <label><input type="radio" name="gender" value="female"checked> 여자</label><br />
+    <label><input type="radio" name="gender" value="female"> 여자</label><br />
     <label>출생 시간:</label>
     <label><input type="radio" name="ampm" value="AM" > 오전</label>
-    <label><input type="radio" name="ampm" value="PM"checked> 오후</label>
+    <label><input type="radio" name="ampm" value="PM"> 오후</label>
     <label>+</label>
     <select id="hour-select">
       <option value="선택"></option>
@@ -181,7 +181,7 @@
       <option value="2">2시</option>
       <option value="3">3시</option>
       <option value="4">4시</option>
-      <option value="5"selected>5시</option>
+      <option value="5">5시</option>
       <option value="6">6시</option>
       <option value="7">7시</option>
       <option value="8" >8시</option>
@@ -191,7 +191,7 @@
     </select>
 <select id="minute-select">
   <option value="선택"></option>
-  <option value="0"selected>0분</option>
+  <option value="0">0분</option>
   <option value="1">1분</option>
   <option value="2">2분</option>
   <option value="3">3분</option>
@@ -261,8 +261,6 @@
   ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다. 
 </div>
   <div id="result" style="display: none;"></div>
-   <!-- ✅ 신살 테이블 -->
-
 
   <div id="today-saju-container" style="margin-top:30px;display: none;"></div>
 
