신살적용중

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   .vine-border-container {
     position: relative;
     padding: 40px;
-    max-width: 800px;
+    max-width: 1200px;
     margin: 40px auto 80px auto;
     background-color: transparent;
     border: none;
@@ -135,6 +135,15 @@
   .green { color: green; font-weight: bold; }
   .red { color: red; font-weight: bold; }
 
+    #sinsal-box table td {
+      text-align: center;
+      vertical-align: middle;
+    }
+
+#sinsal-box table {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 </style>
