--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -328,7 +328,7 @@
 
   <div id="question-box" style="margin-top: 40px; padding: 20px; border-top: 1px solid #ccc;">
     <h3>질문하기</h3>
-    <textarea id="question-input" placeholder="궁금한 점을 입력하세요...(반드시 사주출력후 질문하세요)" rows="8" style="width: 100%; padding: 10px;"></textarea>
+    <textarea id="question-input" placeholder="궁금한 점을 문의하세요...(반드시 사주출력후 질문하세요)" rows="8" style="width: 100%; padding: 10px;"></textarea>
     <br />
     <button id="send-email-button" style="margin-top: 10px; padding: 10px 20px;">보내기 (이메일)</button>
   </div>
