--- a/public/index.html
+++ b/public/index.html
@@ -201,15 +201,15 @@
     
     <select id="calendar-type" name="calendar-type">
       <option value="선택" ></option>
-      <option value="solar"  >양력</option>
+      <option value="solar" selected="" >양력</option>
       <option value="lunar">음력</option>
     </select><br />
     <label>성별:</label>
     <label><input type="radio" name="gender" value="male" > 남자</label>
-    <label><input type="radio" name="gender" value="female"> 여자</label><br />
+    <label><input type="radio" name="gender" value="female"checked> 여자</label><br />
     <label>출생 시간:</label>
     <label><input type="radio" name="ampm" value="AM" > 오전</label>
-    <label><input type="radio" name="ampm" value="PM"> 오후</label>
+    <label><input type="radio" name="ampm" value="PM"checked> 오후</label>
     <label>+</label>
     <select id="hour-select">
       <option value="선택"></option>
@@ -218,7 +218,7 @@
       <option value="2">2시</option>
       <option value="3">3시</option>
       <option value="4">4시</option>
-      <option value="5">5시</option>
+      <option value="5"selected>5시</option>
       <option value="6">6시</option>
       <option value="7">7시</option>
       <option value="8" >8시</option>
@@ -228,7 +228,7 @@
     </select>
 <select id="minute-select">
   <option value="선택"></option>
-  <option value="0">0분</option>
+  <option value="0"selected>0분</option>
   <option value="1">1분</option>
   <option value="2">2분</option>
   <option value="3">3분</option>
